[package]
name = "tree-surgeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
ariadne = "0.2.0"
chumsky = { version = "1.0.0-alpha.3", features = ["label"] }
clap = { version = "3.2.2", features = ["derive"] }
convert_case = "0.6.0"
derive_more = "0.99.17"
is-terminal = "0.4.4"
miette = { version = "5.5.0", features = ["fancy"] }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.31"
tree-sitter = "0.20.6"
tree-sitter-c = "0.20.2"
