[package]
name = "tree-surgeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tree_surgeon"
path = "src/lib.rs"

[[bin]]
name = "tree-surgeon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
chumsky = { version = "1.0.0-alpha.3", features = ["label"] }
clap = { version = "3.2.2", features = ["derive"] }
convert_case = "0.6.0"
derive_more = "0.99.17"
is-terminal = "0.4.4"
lazycell = "1.3.0"
logos = "0.12.1"
miette = { version = "5.9.0", features = ["fancy"] }
ropey = "1.6.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.31"
tree-sitter = "0.20.6"
tree-sitter-c = "0.20.2"
